recursion.cons.lessons.recursion.cons.AllDifferent.scala.error
allDifferent:-6: error: Missing closing brace `}' assumed here
try {
^allDifferent:1: error: expected class or object definition
def allDifferent(l:List[Int]): Boolean = {
^allDifferent:9: error: expected class or object definition
def isMember(l:List[Char], v:Char):Boolean= {
^