recursion.cons.lessons.recursion.cons.AllDifferent.scala.code
def allDifferent(l:List[Int]): Boolean = {
	
if (l == Nil) true
else if (isMember(l.tail, l.head)) false
else allDifferent(l.tail)

}

def isMember(l:List[Char], v:Char):Boolean= {
	l match { 
	case a::_ if a==v => true 
	case a::b => isMember(b, v) 
	case _ => false
} 